BeautifulSoup4 음원 차트 크롤링 - selenium

--- a/_posts/2025-01-01-crwaling.md
+++ b/_posts/2025-01-01-crwaling.md
@@ -1,5 +1,5 @@
 ---
-title: BeautifulSoup4 음원 차트 크롤링 - 환경설정
+title: BeautifulSoup4 음원 차트 크롤링 2025 - 환경설정
 categories: [crawling, python]
 tags: python     # TAG names should always be lowercase
 ---
